# ADAC-Blockchain-Complete

./: .env  .env.example  .gitignore  .snyk  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  hardhat.config.js  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  security.yml
alembic/: env.py  models.py
alembic/versions/: initial_migration.py
backend/: app.py  blockchain.py  requirements.txt
contracts/: AdacGovernance.sol  AdacMarketplace.sol  AdacToken.sol
deployment/: docker-compose.prod.yml
deployment/docker/: docker-compose.yml
deployment/kubernetes/: api-deployment.yaml  deployment.yaml  ingress.yaml  service.yaml
docs/: README.md  api-reference.md  architecture.md  contributing.md  deployment.md  getting-started.md  troubleshooting.md  websocket-api.md
frontend/: .eslintrc.js  config-overrides.js  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  setupTests.ts
scripts/: deploy.js  deployGovernance.js  deployMarketplace.js  deployToken.js
src/: main.py
src/admin/: dashboard.py  network_management.py
src/ai/: __init__.py  ai_manager.py  anomaly_detector.py  prediction_engine.py  predictor.py
src/api/: ai_routes.py  governance_routes.py  main.py  routes.py
test/: AdacGovernance.test.js  AdacMarketplace.test.js  AdacToken.test.js
tests/: test_ai_manager.py  test_ai_routes.py  test_api.py  test_blockchain.py  test_consensus.py  test_governance.py  test_monitoring.py  test_pos.py  test_smart_contracts.py  test_staking.py
(+62 files in other folders)
